force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Assessment_Count__c</fullName>
    <description>Count of questions answered for organisation on Assessment for reporting purposes</description>
    <label>Assessment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>