force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Calculated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Calculated_Close_Date__c</fullName>
    <formula>IF ( 
	DMAPP__Opportunity__r.IsClosed  || DMAPP__Is_Dealmaker_Opp__c = false , 
	IF (
		DMAPP__Opportunity__r.IsWon  || DMAPP__Is_Dealmaker_Opp__c = false, 
		DMAPP__Opportunity__r.CloseDate, 
		null
	),
	IF (
			NULLVALUE (DMAPP__Pause_Date__c,  DATEVALUE(NOW())) &gt; DATEVALUE(NOW()), 
			DMAPP__Pause_Date__c  +  (NULLVALUE(DMAPP__Weeks_To_Close__c, 0) * 7), 
			DATEVALUE(NOW())  +  (NULLVALUE(DMAPP__Weeks_To_Close__c, 0) * 7)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualification Calculated Close Date</label>
    <type>Date</type>
</CustomField>