force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Forecast_Rock_Amount__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Forecast_Rock_Amount__c</fullName>
    <formula>IF (DMAPP__Mix__c = 1, DMAPP__Opportunity_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Rock Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>