force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Health__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Health__c</fullName>
    <formula>IF(DMAPP__Opportunity__r.IsWon,
	1,
	IF(DMAPP__Pause_Date__c&gt;=TODAY(),
		0,
		IF (DMAPP__Opportunity__r.LastModifiedDate &gt; LastModifiedDate,
			IF (DMAPP__Opportunity__r.LastModifiedDate &gt; Now() - 30, 
				1,
				IF (DMAPP__Opportunity__r.LastModifiedDate &gt; Now() - 60,
					2,
					3
				)
			),
			IF (LastModifiedDate &gt; Now() - 30, 
				1,
				IF (LastModifiedDate &gt; Now() - 60,
					2,
					3
				)
			)			
		)
	)
)</formula>
    <label>Health</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>