force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Milestones_Completeness__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Milestones_Completeness__c</fullName>
    <description>Milestones Completeness Percentage = (Milestones Count / Milestones Total) * 100</description>
    <formula>if ( DMAPP__Milestones_Answer_Count__c == null || DMAPP__Milestones_Answer_Count__c == 0|| DMAPP__Milestones_Total__c == null || DMAPP__Milestones_Total__c == 0, 0,
(
 (DMAPP__Milestones_Answer_Count__c / DMAPP__Milestones_Total__c ) * 100
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Milestones Completeness Percentage = (Milestones Count / Milestones Total) * 100</inlineHelpText>
    <label>DEPRECATED Milestones Completeness</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>