force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Milestones_Last_Chatted_By__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Milestones_Last_Chatted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestones Last Chatted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dealmaker_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>