force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Milestones_Last_Chatted_Time__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Milestones_Last_Chatted_Time__c</fullName>
    <label>Milestones Last Chatted Time</label>
    <type>DateTime</type>
</CustomField>