force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Dealmaker Opportunities</relationshipLabel>
    <relationshipName>DM_Opportunity_Extras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>