force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Opportunity_Amount__c</fullName>
    <formula>IF( ISBLANK($Setup.DMAPP__Dealmaker_Playbook_Settings__c.DMAPP__Opp_Amount_Field__c),  DMAPP__Opportunity__r.Amount ,  DMAPP__Amount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>