force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Political_Map_Last_Chatted_Time__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Political_Map_Last_Chatted_Time__c</fullName>
    <label>Relationship Map Last Chatted Time</label>
    <type>DateTime</type>
</CustomField>