force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__PRIME_Completeness__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__PRIME_Completeness__c</fullName>
    <description>PRIME Completeness Score</description>
    <label>PRIME Completeness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>