force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Probability__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Probability__c</fullName>
    <label>Qualification  Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>