force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__TCS_Q1__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__TCS_Q1__c</fullName>
    <inlineHelpText>Is there a compelling event or can you create one?</inlineHelpText>
    <label>TCS_Q1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>