force-app/main/default/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__Worked_in_DM__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Worked_in_DM__c</fullName>
    <formula>OR (DMAPP__Worked_in_OM__c, DMAPP__Worked_in_Playbook__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worked in DM</label>
    <type>Checkbox</type>
</CustomField>